// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus CDC schematics: ng-add CDC feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { CdcModule } from "@spartacus/cdc";
import { ManageUsersModule } from "@spartacus/cdc/manage-users";
import { CdcConfig, CdcRootModule } from "@spartacus/cdc/root";
import { CDCUserAccountModule } from "@spartacus/cdc/user-account";
import { CDCUserProfileModule } from "@spartacus/cdc/user-profile";
import { provideConfig } from "@spartacus/core";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule,
    CdcModule,
    CDCUserAccountModule,
    CDCUserProfileModule,
    ManageUsersModule
  ],
  providers: [provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: 'JS_SDK_URL_PLACEHOLDER',
        sessionExpiration: 3600
      },
    ],
  })]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CdcConfig, CdcRootModule, CDC_FEATURE } from "@spartacus/cdc/root";
import { CmsConfig, provideConfig } from "@spartacus/core";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@spartacus/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: 'JS_SDK_URL_PLACEHOLDER',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should install the appropriate dependencies 1`] = `
"import { NgModule } from '@angular/core';
import { CDCUserAccountModule } from "@spartacus/cdc/user-account";
import { UserAccountModule } from "@spartacus/user/account";

@NgModule({
  declarations: [],
  imports: [
    UserAccountModule,
    CDCUserAccountModule
  ]
})
export class UserAccountWrapperModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should install the appropriate dependencies 2`] = `
"import { NgModule } from '@angular/core';
import { CDCUserProfileModule } from "@spartacus/cdc/user-profile";
import { UserProfileModule } from "@spartacus/user/profile";

@NgModule({
  declarations: [],
  imports: [
    UserProfileModule,
    CDCUserProfileModule
  ]
})
export class UserProfileWrapperModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should install the appropriate dependencies 3`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { organizationTranslationChunksConfig, organizationTranslations } from "@spartacus/organization/administration/assets";
import { AdministrationRootModule, ORGANIZATION_ADMINISTRATION_FEATURE } from "@spartacus/organization/administration/root";

@NgModule({
  declarations: [],
  imports: [
    AdministrationRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [ORGANIZATION_ADMINISTRATION_FEATURE]: {
        module: () =>
          import('./administration-wrapper.module').then((m) => m.AdministrationWrapperModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: organizationTranslations,
      chunks: organizationTranslationChunksConfig,
    },
  })
  ]
})
export class OrganizationAdministrationFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature validation of jsSDKUrl should set the given javascriptUrl 1`] = `
"import { NgModule } from '@angular/core';
import { CdcConfig, CdcRootModule, CDC_FEATURE } from "@spartacus/cdc/root";
import { CmsConfig, provideConfig } from "@spartacus/core";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@spartacus/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: '<dc>.gigya.com/<api-key>',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;
